--- a/Client/appsettings.json
+++ b/Client/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "LocalDb": "Server=(localdb)\\mssqllocaldb;Database=Wegan;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
