--- a/Client/appsettings.json
+++ b/Client/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalDb": "Server=(localdb)\\mssqllocaldb;Database=Wegan;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocalDb": "server=localhost;database=wegan;user=Admin;password=Admin@007"
   },
   "Logging": {
     "LogLevel": {
