--- a/Admin/package.json
+++ b/Admin/package.json
@@ -21,6 +21,7 @@
     "postpackage": "electron-packager ./ --out=./release-builds"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "ckeditor4-react": "^1.4.0",
     "express": "^4.17.1",
