--- a/.github/workflows/wegan.yml
+++ b/.github/workflows/wegan.yml
@@ -1,36 +1,39 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# This is a basic workflow to help you get started with Actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - wegan
+name: Heroku Deployment
 
+# Controls when the action will run. 
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches:
-      - tarun, dev
+    branches: [ dev]
+  pull_request:
+    branches: [ dev ]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-and-deploy:
-    runs-on: windows-latest
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@master
-
-    - name: Set up .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '5.0.x'
-
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
-
-    - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'wegan'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_c1cfec3687a048e0b0fcfb3603983f4d }}
-        package: ${{env.DOTNET_ROOT}}/myapp 
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - name: Deploy Docker Image to Heroku App
+  # You may pin to the exact commit or the version.
+  # uses: jctaveras/heroku-deploy@7b87e8dd4665d3b667e0cf1633241a66e3abd396
+        uses: jctaveras/heroku-deploy@v2.0.0
+        with:
+    # Email Linked to your Heroku Account
+            email: tarunreddykreddy@gmail.com
+    # Your Heroku API Key
+            api_key: df0ecf28-b6c3-4cbc-9716-b1d86e5063de
+    # Your Heroku App Name
+            app_name: fast-oasis-40082
+    # Dokerfile path
+            dockerfile_path: .
